# kamajii

./: .tool-versions  Cargo.toml  LICENSE  README.md  build.zig  kamajii.cabal  mix.exs  shard.yml  stack.yaml
kamajii/: README.md  mix.exs
kamajii/lib/: kamajii.ex
kamajii/lib/kamajii/api/actions/: not_found.ex
kamajii/test/: kamajii_test.exs
lib/kamajii/: api.ex  application.ex
lib/kamajii/api/: router.ex
lib/kamajii/api/actions/: welcome_message.ex
lib/kamajii/src/: kamajii.cr
spec/: kamajii_spec.cr  spec_helper.cr
src/: Files.hs  Interact.hs  Main.hs  Meta.hs  Server.hs  Stack.hs  kamajii.cr  main.rs  main.zig  run_server.cr
src/Kamajii/: Meta.hs  Stack.hs  TcpServer.hs
test/kamajii/api/actions/: welcome_message_test.exs
