name:                kamajii
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hiljusti/kamajii#readme
license:             BSD3
license-file:        LICENSE
author:              J.R. Hill
maintainer:          hiljusti@pm.me
copyright:           WTFPL
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kamajii
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Kamajii.Meta, Kamajii.TcpServer, Kamajii.Stack
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring == 0.10.12.0, easy-file == 0.2.2, network-simple == 0.4.5
